v0.8.1 | 12/06/2016

  Updates

    - Doubled map size

  Bug Fixes

    ~ Fixed a bug that caused the view to not reset after returning to the main menu or restarting the game

    ~ Fixed a bug that rendered the cursor in the multiplayer connect state invisible

    ~ Fixed a bug that improperly aligned the gui elements in the multiplayer connect state



v0.8.0a | 08/06/2016

  Features

    * Added a new mouse cursor



v0.8.0 | 07/06/2016

  Features

    * Integrated turrets into multiplayer

  Updates

    - Completed turret functionality (draggable turret buttons, base turret indicators)

    - Stat Changes

        - Unit(s)
            - Knight
                - Reduced damage to 35 (from 45)
            - Destroyer
                - Reduced damage to 70 (from 75)
                - Reduced attack speed to 0.7s (from 0.75s)

        - Turret(s)
            - Laser Turret
                - Increased cost to 215g (from 175g)

  Bug Fixes

    ~ Fixed a bug that miscalculated the enemy base's turrets' rotation

    ~ Fixed a bug that wrongly placed online opponents' turrets



v0.7.2a | 06/06/2016

  Bug Fixes

    ~ Fixed a bug that allowed the player to create multiple turrets in the same position



v0.7.2 | 04/06/2016, 05/06/2016

  Updates

    - Slight change to the button's text that returns to the main menu from the connection screen

    - Unit Stat Changes

        - Knight
            - Reduced health to 200 (from 250)
            - Reduced range to 15 (from 18)

        - Samurai
            - Increased attack rate to 0.45s (from 0.75s)
            - Increased spawn time to 3.5s (from 2.5s)
            - Increased cost to 150g (from 50g)
            - Reduced health to 280 (from 500)
            - Reduced damage to 25 (from 40)
            - Reduced range to 15 (from 25)
            - Reduced speed to 70 (from 90)

            - Reduced size
        - Destroyer
            - Increased health to 500 (from 400)